ajustes de código e nomeclatura dos arquivos

--- a/index-exemplo1.html
+++ b/index-exemplo1.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
   <meta charset="utf-8" />
   <title>Minha magnífica página</title>
@@ -10,11 +9,9 @@
   <script src="http://jonstipe.github.io/number-polyfill/vendor/jquery/jquery-1.10.2.min.js"></script>
   <script src="http://jonstipe.github.io/number-polyfill/number-polyfill.js"></script>
 </head>
-
 <body>
 
 <input type="number" max="10" min="5" step="0.25" />
-
 <header>
   <h1>Título da minha página</h1>
   <nav>
@@ -45,41 +42,41 @@
 </header>
 
 <article>
-<h2>Subtítulo da minha página</h2>
+  <h2>Subtítulo da minha página</h2>
 
-<p>Texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto. </p>
+  <p>Texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto. </p>
 
-<p>Texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto. </p>
+  <p>Texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto. </p>
 
 </article>
 
 <aside>
-<h3>Glossário</h3>
-<dl>
-  <dt>Texto:</dt><dd>um monte de texto</dd>
-  <dt>Título:</dt><dd>um texto mais importante</dd>
-  <dt>Subtítulo:</dt><dd>um texto mais ou menos</dd>
-</dl>
+  <h3>Glossário</h3>
+  <dl>
+    <dt>Texto:</dt><dd>um monte de texto</dd>
+    <dt>Título:</dt><dd>um texto mais importante</dd>
+    <dt>Subtítulo:</dt><dd>um texto mais ou menos</dd>
+  </dl>
 </aside>
 
 <section>
-<h3>Gostou? Compre o seu!</h3>
-<form>
-<fieldset>
-<label>Nome: <input placeholder="Seu lindo nominho aqui." required="required" pattern="[^ ]{3,}" /></label>
-<label>E-mail: <input type="email" /></label>
-<label>Data de Nascimento: <input type="date" /></label>
-</fieldset>
-<input type="submit" value="OK" />
-</form>
+  <h3>Gostou? Compre o seu!</h3>
+  <form>
+    <fieldset>
+      <label>Nome: <input placeholder="Seu lindo nominho aqui." required="required" pattern="[^ ]{3,}" /></label>
+      <label>E-mail: <input type="email" /></label>
+      <label>Data de Nascimento: <input type="date" /></label>
+    </fieldset>
+    <input type="submit" value="OK" />
+  </form>
 </section>
 
 <footer>
-<address>Copyright - 2013 Bla bla bla
-Rua dos Bobos, 0
-Vila Qualquer</address>
+  <address>
+    Copyright - 2013 Bla bla bla
+    Rua dos Bobos, 0
+    Vila Qualquer
+  </address>
 </footer>
-
 </body>
-
 </html>
