--- a/index-exemplo6-SVG.html
+++ b/index-exemplo6-SVG.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Exemplo MathML</title>
+    <title>SVG</title>
     <script>
     valoresAtuais=[200,200,200,200]
     valoresAlvo=[200,200,200,200]
