--- a/index-exemplo5-canvas.html
+++ b/index-exemplo5-canvas.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Exemplo MathML</title>
+    <title>Exemplo Canvas</title>
     <script>
     function desenhar(){
       var canvas=document.querySelector('canvas')
